@@ -268,6 +268,31 @@ void CLocatorBar::OnLButtonDown(UINT nFlags, CPoint point)
 	CDialogBar::OnLButtonDown(nFlags, point);
 }
 
+void CLocatorBar::OnMouseMove(UINT nFlags, CPoint point)
+{
+	if (nFlags & MK_LBUTTON)
+	{
+		CRect rect;
+		GetClientRect(rect); 
+		int nLine = point.y*m_nLines/rect.Height();
+
+		if ((m_pMainFrm)&&(m_pMainFrm->m_pwndBottomView))
+		{
+			nLine = nLine - (m_pMainFrm->m_pwndBottomView->GetScreenLines()/2);
+		}
+
+		if (nLine < 0)
+			nLine = 0;
+		if ((m_pMainFrm)&&(m_pMainFrm->m_pwndBottomView))
+			m_pMainFrm->m_pwndBottomView->ScrollToLine(nLine);
+		if ((m_pMainFrm)&&(m_pMainFrm->m_pwndLeftView))
+			m_pMainFrm->m_pwndLeftView->ScrollToLine(nLine);
+		if ((m_pMainFrm)&&(m_pMainFrm->m_pwndRightView))
+			m_pMainFrm->m_pwndRightView->ScrollToLine(nLine);
+		Invalidate();
+	}
+}
+
 
 
 
