@@ -1,3 +1,5 @@
+- ADD: It's possible now to drag on the locatorbar
+       in TME. (Stefan)
 - ADD: TME now shows ToolTips for the filenames in
        each view to make it easier to see the
        full path. (Stefan)
